--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet">
+    <img src="profile_image.png">
     <title>Megentarouのポートフォリオ</title>
   </head>
   <body>
