--- a/index.html
+++ b/index.html
@@ -82,5 +82,8 @@
         <td>表彰、受賞歴、メディア掲載記事などあれば</td>
       </tr>
     </table>
+        <h3>好きな動画</h3>
+    <script type="application/javascript" src="https://youtu.be/w_pqDkIx5i8?feature=shared"></script>
+    <noscript><a href="https://youtu.be/w_pqDkIx5i8?feature=shared">N予備校夏期講習2017CM</a></noscript>
   </body>
 </html>
