--- a/index.html
+++ b/index.html
@@ -85,5 +85,8 @@
         <h3>好きな動画</h3>
     <script type="application/javascript" src="https://youtu.be/w_pqDkIx5i8?feature=shared"></script>
     <noscript><a href="https://youtu.be/w_pqDkIx5i8?feature=shared">N予備校夏期講習2017CM</a></noscript>
+
+    <h3>Twitter</h3>
+    <a class="twitter-timeline" data-width="400" data-height="600" href="https://twitter.com/home?ref_src=twsrc%5Etfw">Tweets by home</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
