--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <td>表彰、受賞歴、メディア掲載記事などあれば</td>
       </tr>
     </table>
-        <h3>好きな動画</h3>
-    <script type="application/javascript" src="https://youtu.be/w_pqDkIx5i8?feature=shared"></script>
-    <noscript><a href="https://youtu.be/w_pqDkIx5i8?feature=shared">N予備校夏期講習2017CM</a></noscript>
+          <h3>ニコニコ動画</h3>
+    <script type="application/javascript" src="https://embed.nicovideo.jp/watch/1500362884/script?w=640&h=360"></script>
+    <noscript><a href="https://www.nicovideo.jp/watch/1500362884">N予備校夏期講習2017CM</a></noscript>
 
     <h3>Twitter</h3>
     <a class="twitter-timeline" data-width="400" data-height="600" href="https://twitter.com/home?ref_src=twsrc%5Etfw">Tweets by home</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
